[fix] Removed overflow tag from top level content css
We had an issue where the pop over for the VerseNote had
scroll bars showing, whereas the Popover for Interlinear
did not. This property was added when we were messing with
the number being hidden and was left there.

--- a/web-ui/src/app.pcss
+++ b/web-ui/src/app.pcss
@@ -39,7 +39,7 @@
   .content {
     font-size:  var( --content-font-size );
 
-    @apply  text-justify leading-tight pl-2 pr-4 overflow-x-hidden;
+    @apply  text-justify leading-tight pl-2 pr-4;
   }
 
   .content .chapter.header {
